examples/test/testpolicy6939.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6939
  namespace: namespace132
spec:
  podSelector:
    matchLabels:
      key49: value3
      key19: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value26
      podSelector:
        matchLabels:
          key20: value17
          key30: value24
